added finishing touches

--- a/Trending-YouTube-Website/app.css
+++ b/Trending-YouTube-Website/app.css
@@ -30,3 +30,14 @@ body {
     text-overflow: ellipsis;
     display: block;
 }
+:root {
+ --titleFont: "Pathway Gothic One";
+ --descriptionFont: "Inter"
+}
+
+.titleFont {
+ font-family: var(--titleFont);
+}
+.descriptionFont {
+ font-family: var(--descriptionFont);
+}
